syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto";

package proto;

service WalletNode {
    rpc RegisterArtowrk(stream WalletNodeRegisterArtworkRequest) returns (stream WalletNodeRegisterArtworkReply);
}

message WalletNodeRegisterArtworkRequest {
    message AcceptSecondaryNodesRequest {
        string connID = 1;
    }
    message ConnectToPrimaryNodeRequest {
        string connID = 1;
        string primary_node_key = 2;
    }
    message UploadImageRequest {
        bytes image = 1;
    }
    message SendTicketRequest {
        bytes ticket = 1;
        string ticket_signature = 2;
        string fgpt= 3;
        string fgpt_signature = 4;
        string fee_txid = 5;
        bytes thumbnail = 6;
    }

    oneof test_oneof {
        AcceptSecondaryNodesRequest accept_secondary_nodes = 1;
        ConnectToPrimaryNodeRequest connect_to_primary_node = 2;
        UploadImageRequest upload_image = 3;
        SendTicketRequest send_ticket = 4;
    }
}

message WalletNodeRegisterArtworkReply {
    message Error {
        enum Status {
            OK = 0;
            ERR = 1;
        }
        Status status = 1;
        string errMsg = 2;
    }
    message AcceptSecondaryNodesReply {
        message Peer {
            string secondary_key = 1;
        }
        repeated Peer peers = 1;
        Error error = 2;
    }
    message ConnectToPrimaryNodeReply {
        Error error = 1;
    }
    message UploadImageReply {
        string fgpt = 1;
        Error error = 2;
    }
    message SendTicketReply {
        string ticket_txid = 1;
        Error error = 2;
    }

    oneof test_oneof {
        AcceptSecondaryNodesReply accept_secondary_nodes = 1;
        ConnectToPrimaryNodeReply connect_to_primary_node = 2;
        UploadImageReply upload_image = 3;
        SendTicketReply send_ticket = 4;
     }
}
